--- a/spring-cloud-huawei-dashboard/pom.xml
+++ b/spring-cloud-huawei-dashboard/pom.xml
@@ -27,8 +27,7 @@
   </parent>
 
   <artifactId>spring-cloud-huawei-dashboard</artifactId>
-  <name>Spring Cloud Huawei Dishboard</name>
-
+  <name>Spring Cloud Huawei::Dashboard</name>
 
   <dependencies>
     <dependency>
