--- a/spring-cloud-huawei-discovery/pom.xml
+++ b/spring-cloud-huawei-discovery/pom.xml
@@ -27,8 +27,7 @@
   </parent>
 
   <artifactId>spring-cloud-huawei-discovery</artifactId>
-  <name>Spring Cloud Huawei Discovery</name>
-
+  <name>Spring Cloud Huawei::Discovery</name>
 
   <dependencies>
     <dependency>
