--- a/spring-cloud-huawei-common/pom.xml
+++ b/spring-cloud-huawei-common/pom.xml
@@ -28,6 +28,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>spring-cloud-huawei-common</artifactId>
+  <name>Spring Cloud Huawei::Common</name>
 
   <dependencies>
     <dependency>
