--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-core/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-core/pom.xml
@@ -25,6 +25,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>spring-cloud-starter-huawei-core</artifactId>
+  <name>Spring Cloud Huawei::Starter::Core</name>
 
   <dependencies>
     <dependency>
