--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-discovery/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-discovery/pom.xml
@@ -25,6 +25,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>spring-cloud-starter-huawei-discovery</artifactId>
+  <name>Spring Cloud Huawei::Starter::Discovery</name>
 
   <dependencies>
     <dependency>
