--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-governance/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-governance/pom.xml
@@ -26,6 +26,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>spring-cloud-starter-huawei-governance</artifactId>
+  <name>Spring Cloud Huawei::Starter::Governance</name>
+
   <dependencies>
     <dependency>
       <groupId>com.huaweicloud</groupId>
