--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-jasypt/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-jasypt/pom.xml
@@ -26,6 +26,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>spring-cloud-starter-huawei-jasypt</artifactId>
+  <name>Spring Cloud Huawei::Starter::Jasypt</name>
+
   <dependencies>
     <dependency>
       <groupId>com.github.ulisesbocchio</groupId>
