--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-swagger/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-swagger/pom.xml
@@ -26,6 +26,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>spring-cloud-starter-huawei-swagger</artifactId>
+  <name>Spring Cloud Huawei::Starter::Swagger</name>
 
   <dependencies>
     <dependency>
