--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine/pom.xml
@@ -57,5 +57,13 @@
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-dashboard</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.github.openfeign</groupId>
+      <artifactId>feign-httpclient</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+    </dependency>
   </dependencies>
 </project>
