--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-hessian/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-hessian/pom.xml
@@ -49,6 +49,16 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-autoconfigure</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.github.openfeign</groupId>
+      <artifactId>feign-core</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-openfeign-core</artifactId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
 </project>
