--- a/spring-cloud-starter-huawei/pom.xml
+++ b/spring-cloud-starter-huawei/pom.xml
@@ -38,6 +38,7 @@
     <module>spring-cloud-starter-huawei-core</module>
     <module>spring-cloud-starter-huawei-service-engine</module>
     <module>spring-cloud-starter-huawei-service-engine-gateway</module>
+    <module>spring-cloud-starter-huawei-service-engine-webflux</module>
     <module>spring-cloud-starter-huawei-jasypt</module>
     <module>spring-cloud-starter-huawei-hessian</module>
     <module>spring-cloud-starter-huawei-actuator</module>
