--- a/integration-tests/discovery-tests/pom.xml
+++ b/integration-tests/discovery-tests/pom.xml
@@ -34,6 +34,7 @@
     <module>price-provider</module>
     <module>order-consumer</module>
     <module>account-provider</module>
+    <module>webflux-provider</module>
     <module>discovery-tests-client</module>
   </modules>
 
