[#883]support webflux starter (#884)

--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine-webflux/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine-webflux/pom.xml
@@ -21,12 +21,12 @@
   <parent>
     <artifactId>spring-cloud-starter-huawei</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>1.11.0-2020.0.x-SNAPSHOT</version>
+    <version>1.11.0-2021.0.x-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>spring-cloud-starter-huawei-service-engine</artifactId>
-  <name>Spring Cloud Huawei::Starter::Service Engine</name>
+  <artifactId>spring-cloud-starter-huawei-service-engine-webflux</artifactId>
+  <name>Spring Cloud Huawei::Starter::Service Engine WebFlux</name>
 
   <dependencies>
     <dependency>
@@ -43,31 +43,15 @@
     </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
-      <artifactId>spring-cloud-starter-huawei-swagger</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-jasypt</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.huaweicloud</groupId>
-      <artifactId>spring-cloud-starter-huawei-hessian</artifactId>
     </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-dashboard</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.github.openfeign</groupId>
-      <artifactId>feign-httpclient</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-openfeign</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
     </dependency>
   </dependencies>
 </project>
