[#865]webflux: support server identifier rate limiting

--- a/integration-tests/discovery-tests/webflux-provider/src/main/resources/application.yaml
+++ b/integration-tests/discovery-tests/webflux-provider/src/main/resources/application.yaml
@@ -25,6 +25,14 @@ servicecomb:
       matches:
         - apiPath:
             exact: "/testWebFluxServiceRateLimiting"
+    testWebFluxServiceIdentifierRateLimiting: |
+      matches:
+        - apiPath:
+            exact: "/testWebFluxServiceIdentifierRateLimiting"
   rateLimiting:
     testWebFluxServiceRateLimiting: |
       rate: 10
+  identifierRateLimiting:
+    testWebFluxServiceIdentifierRateLimiting: |
+      rate: 2
+      identifier: user-id
