--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -30,7 +30,7 @@
   <artifactId>spring-cloud-huawei-dependencies</artifactId>
   <packaging>pom</packaging>
   <version>1.11.0-2020.0.x-SNAPSHOT</version>
-  <name>Spring Cloud Huawei Dependencies</name>
+  <name>Spring Cloud Huawei::Dependencies</name>
   <properties>
     <feign-core.version>11.8</feign-core.version>
     <httpclient.version>4.5.9</httpclient.version>
