[#812]fix problem when discovery not enabled start fail (#926)

--- a/integration-tests/discovery-tests/gateway/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-tests/gateway/src/main/resources/bootstrap.yaml
@@ -24,6 +24,7 @@ spring:
   cloud:
     servicecomb:
       discovery:
+        enabled: true
         serviceName: ${spring.application.name}
         watch: false
         address: ${PAAS_CSE_SC_ENDPOINT:http://127.0.0.1:30100}
