--- a/integration-tests/mesh-tests/pom.xml
+++ b/integration-tests/mesh-tests/pom.xml
@@ -15,39 +15,24 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
+    <artifactId>integration-tests</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <artifactId>spring-cloud-huawei-parents</artifactId>
-    <version>1.11.0-2020.0.x-SNAPSHOT</version>
-    <relativePath>../spring-cloud-huawei-parents</relativePath>
+    <version>1.11.0-2021.0.x-SNAPSHOT</version>
   </parent>
-
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>integration-tests</artifactId>
-  <name>Spring Cloud Huawei::Integration Tests</name>
+  <artifactId>mesh-tests</artifactId>
+  <name>Integration Tests::Mesh Tests</name>
   <packaging>pom</packaging>
 
   <modules>
-    <module>docker-build-config</module>
-    <module>docker-run-config</module>
-    <module>discovery-tests</module>
-    <module>mesh-tests</module>
-    <module>cse-v1</module>
-    <module>cse-v2</module>
+    <module>mesh-gateway</module>
+    <module>mesh-provider</module>
+    <module>mesh-consumer</module>
+    <module>mesh-tests-client</module>
   </modules>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-    </dependency>
-  </dependencies>
 </project>
