[#933]router may cause http header twice the size of the original

--- a/integration-tests/cse-v1/gateway/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v1/gateway/src/main/resources/bootstrap.yml
@@ -45,3 +45,7 @@ spring:
         secretKey: ${CREDENTIALS_SK}
         cipher: default
         project: cn-south-1
+
+      context:
+        headerContextMapper:
+          canary: canary
