[#953]support access log include context headers (#954)

--- a/integration-tests/discovery-tests/price-provider/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-tests/price-provider/src/main/resources/bootstrap.yaml
@@ -48,3 +48,7 @@ spring:
       # testing spring cloud swagger generation
       swagger:
         enableJavaChassisAdapter: false
+
+      # testing access log
+      context:
+        traceContexts: x-microservice-name,x-instance-id
