--- a/integration-tests/discovery-tests/order-consumer/src/main/resources/application.yaml
+++ b/integration-tests/discovery-tests/order-consumer/src/main/resources/application.yaml
@@ -154,3 +154,6 @@ servicecomb:
     demo-loadbalance_feign: |
       rule: Random
 
+test:
+  value:
+    applicationOverride: "orderApplicationOverride"
