--- a/spring-cloud-huawei-common/src/main/resources/component.yaml
+++ b/spring-cloud-huawei-common/src/main/resources/component.yaml
@@ -16,38 +16,6 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
-server:
-  port: 9098
+x-component-order: 100
 
-spring:
-  application:
-    name: order
-  cloud:
-    servicecomb:
-      service:
-        name: order
-        version: 0.0.1
-        properties:
-          x-test: value
-          x-test2: value2
-      instance:
-        initialStatus: UP
-        properties:
-          x-test: value
-          x-test2: value2
-      discovery:
-        enabled: true
-        address: http://127.0.0.1:30100
-      config:
-        enabled: true
-        serverType: kie
-        serverAddr: http://127.0.0.1:30110
-        firstPullRequired: false
 
-      # testing servicecomb swagger generation
-      swagger:
-        enableJavaChassisAdapter: true
-
-test:
-  value:
-    bootstrapOverride: "orderBootstrapOverride"
